[project]
name = "tfp-causalimpact"
description = "Inferring causal effects using Bayesian Structural Time-Series models"
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = {file = "LICENSE"}
authors = [{name = "TFP CausalImpact Authors", email="no-reply@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

dependencies = [
    "Jinja2",
    "altair>=5.0,<6.0",
    "numpy>=1.22,<2.0",
    "pandas>=2.0.0,<2.4",
    "tensorflow>=2.16.1,<2.20",
    "tensorflow-probability>=0.24.0,<0.26"
]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google/tfp-causalimpact"
repository = "https://github.com/google/tfp-causalimpact"

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "absl-py",
    "altair~=4.2",
    "matplotlib",
    "pylint>=2.6.0",
    "pyink",
    "pytest",
    "pytest-xdist",
    "statsmodels"
]

[tool.flit.module]
name = "causalimpact"

[tool.flit.sdist]
exclude = ["causalimpact/testdata", "causalimpact/*_test.py"]

[tool.pyink]
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
